--- a/.api/config.properties
+++ b/.api/config.properties
@@ -1,8 +1,8 @@
 SubscriptionId=588bd1bd-718e-4c84-8586-f2d69a7cf61a
-ResourceGroupName=vm-test-mule_group
+ResourceGroupName=DefaultResourceGroup-CUS
 ApiName=api-backoffice-testapi6
 ApiId=api-backoffice-testapi6
-ApimName=vm-demo-apim
+ApimName=everest-apim-demo | APIs
 ApiPolicyConfigFilePath =policies.xml
 ApiVisibility=Partner
 Swagger2PostmanPath=C:\Users\VMADMIN\AppData\Local\Postman\Postman.exe
