--- a/.api/config.properties
+++ b/.api/config.properties
@@ -2,7 +2,7 @@ SubscriptionId=588bd1bd-718e-4c84-8586-f2d69a7cf61a
 ResourceGroupName=DefaultResourceGroup-CUS
 ApiName=api-backoffice-testapi6
 ApiId=api-backoffice-testapi6
-ApimName=everest-apim-demo | APIs
+ApimName=everest-apim-demo
 ApiPolicyConfigFilePath =policies.xml
 ApiVisibility=Partner
 Swagger2PostmanPath=C:\Users\VMADMIN\AppData\Local\Postman\Postman.exe
