--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -28,14 +28,6 @@ jobs:
         # Only restore the cache on the first job in the workflow
         if: runner.job == steps.build.id
 
-      - name: Cache npm modules
-        uses: actions/cache@v2
-        with:
-          path: |
-            $env:USERPROFILE\.npm\*
-          key: modules-npm-${{ runner.os }}
-        if: runner.job == steps.build.id
-
       - name: Installing Dependencies
         run: |
           # Check if the modules are cached and CODESPACES is not set (not in GitHub Codespaces)
@@ -45,11 +37,14 @@ jobs:
             Uninstall-AzureRm
             Install-Module -Name powershell-yaml -Force
             Import-Module -Name powershell-yaml
-            npm install -g @stoplight/spectral
-            npm install -g openapi-to-postmanv2
           }
         env:
           CODESPACES: ${{ runner.os }}
+
+      - name: Installing Dependencies
+        run: |
+          npm install -g @stoplight/spectral
+          npm install -g openapi-to-postmanv2
 
       - name: Generate Postman collection from OpenAPI file
         run: |
