--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Installing Dependencies
         run: |
           Install-Module -Name Az -force -AllowClobber
-          Import-Module -Name -Az
+          Import-Module -Name Az
           Install-Module -Name powershell-yaml -Force
           Import-Module -Name powershell-yaml
           npm install -g @stoplight/spectral
