--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -8,10 +8,12 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Azure Login
+        uses: azure/login@v1
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
