--- a/.github/workflows/azure_api_deployment.yml
+++ b/.github/workflows/azure_api_deployment.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Azure Login
-        uses: azure/login@v1
+      - name: Set up PowerShell
+        uses: azure/setup-powershell@v1
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
